--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.9",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.11.27",
     "@types/react": "18.2.65",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
-    "next": "14.1.3",
+    "eslint-config-next": "13.4.12",
+    "lucide-react": "^0.358.0",
+    "next": "13.4.12",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.4.2"
   }
 }
